--- a/carlae_page/theme/_templates/page.html
+++ b/carlae_page/theme/_templates/page.html
@@ -52,7 +52,7 @@
       <h1 class="title"> {{ project_name }} </h1>
       {% if not( smart_title is none) %}<h2 class="title"> {{ smart_title }} </h2>{% endif %}
       {% if not( project_url is none) %}
-      <a class="button button-primary" href="{{ project_url }}" > {{ project_url_title }} </a>
+      <a class="button button-primary" href="{{ project_url }}" style="background-color:{{ concept_color }};" > {{ project_url_title }} </a>
       {% endif %}
       {% if not (three_concepts is none) %}
       <div class="value-props row">
