--- a/carlae/themes/skeleton/_templates/page.html
+++ b/carlae/themes/skeleton/_templates/page.html
@@ -34,7 +34,7 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script type="text/javascript" async="" src="js/ga.js"></script><script id="twitter-wjs" src="js/widgets.js"></script><script src="js/jquery.js"></script>
-  <script src="js/run_prettify.html"></script>
+  <!--<script src="js/run_prettify.html"></script>-->
   <link rel="stylesheet" href="css/github-prettify-theme.css">
   <script src="js/site.js"></script>
 
