modify the footer of the two template

--- a/carlae/themes/minimal/_templates/page.html
+++ b/carlae/themes/minimal/_templates/page.html
@@ -374,7 +374,7 @@
       </section>
       <footer>
         <p> {{ author }} is working with a lot of passion on <a href="{{ project_url }}">{{ project_name }}</a>.</p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Built with <a href="https://wcchin.github.io/carlae/">Carlae</a>. Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
     <!-- <script src="js/scale.fix.js"></script> -->
