--- a/carlae/themes/poole/_templates/page.html
+++ b/carlae/themes/poole/_templates/page.html
@@ -90,11 +90,9 @@
     </div>
     
     <div id="footer">
-        Built with <a href="http://bitbucket.org/obensonne/poole">Poole</a>
+        Built with <a href="https://wcchin.github.io/carlae/">Carlae</a>
         &middot;
-        Licensed as <a href="http://creativecommons.org/licenses/by-sa/3.0">CC-SA</a>
-        &middot;
-        <a href="http://validator.w3.org/check?uri=referer">Validate me</a>
+        Theme modified from Poole. 
     </div>
 </body>
 </html>
