--- a/carlae/themes/poole/_templates/page.html
+++ b/carlae/themes/poole/_templates/page.html
@@ -10,65 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.10.1/css/brands.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.10.1/css/solid.min.css">
   <style type="text/css">
-      body {
-          font-family: sans;
-          width: 800px;
-          margin: 1em auto;
-          color: #2e3436;
-      }
-      div#box {
-      }
-      div#header, div#menu, div#content, div#footer {
-          padding: 1em;
-      }
-      div#menu {
-          background-color: #eeeeec;
-          padding: 0.6em 0 0.6em 0;
-      }
-      #menu span {
-          font-weight: bold;
-          padding: 0.6em;
-      }
-      #menu span.current {
-          background-color: #ffffff;
-          border: 1px solid #eeeeec;
-      }
-      #menu a {
-          color: #000000;
-          text-decoration: none;
-      }
-      div#footer {
-          color: gray;
-          text-align: center;
-          font-size: small;
-      }
-      div#footer a {
-          color: gray;
-          text-decoration: none;
-      }
-      pre {
-          border: dotted black 1px;
-          background: #eeeeec;
-          font-size: small;
-          padding: 1em;
-      }
-	  a.btn {
-		  border: none;
-		  background-color: inherit;
-		  padding: 14px 22px;
-		  font-size: 16px;
-		  cursor: pointer;
-		  display: inline-block;
-		}
-
-		/* On mouse-over */
-		a.btn:hover {background: #eee;}
-
-		a.success {color: green;}
-		a.info {color: dodgerblue;}
-		a.warning {color: orange;}
-		a.danger {color: red;}
-		a.default {color: black;}
+  body{font-family:sans;width:800px;margin:1em auto;color:#2e3436}div#content,div#footer,div#header,div#menu{padding:1em}div#menu{background-color:#eeeeec;padding:.6em 0 .6em 0}#menu span{font-weight:700;padding:.6em}#menu span.current{background-color:#fff;border:1px solid #eeeeec}#menu a{color:#000;text-decoration:none}div#footer{color:gray;text-align:center;font-size:small}div#footer a{color:gray;text-decoration:none}pre{border:dotted #000 1px;background:#eeeeec;font-size:small;padding:1em}a.btn{border:none;background-color:inherit;padding:14px 22px;font-size:16px;cursor:pointer;display:inline-block}a.btn:hover{background:#eee}a.success{color:green}a.info{color:#1e90ff}a.warning{color:orange}a.danger{color:red}a.default{color:#000}
   </style>
 </head>
 <body>
